# mini-llm-distributed

./: .gitattributes  .gitignore  Makefile  README.md  RUNBOOK_multigpu.md  pyproject.toml  requirements.txt  run_l2.sh  train_ddp.py  train_fsdp.py  train_single.py
.github/workflows/: ci.yml
bench/: optim.csv  optim.py  plot.py  scaling.csv  scaling.py  scaling_comm.csv  scaling_compute.csv
src/minigpt/: __init__.py  data.py  distributed.py  model.py
tests/: conftest.py  test_data.py  test_distributed.py  test_model.py
