[project]
name = "mini-llm-distributed"
version = "0.1.0"
description = "Компактный GPT + честная обвязка распределённого обучения (DDP/FSDP) с проверкой корректности и бенчмарком масштабирования"
requires-python = ">=3.10"
dependencies = ["torch>=2.1", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
